# CrawlIt

./: .gitignore  README.md
.github/workflows/: deploy.yml
Crawlit Frontend/: readme.md
Crawlit Frontend/frontend/: package-lock.json  package.json  tsconfig.json
Crawlit Frontend/frontend/app/: layout.tsx  page.tsx
Crawlit Frontend/frontend/app/[repoOwner]/[repoName]/: page.tsx
Crawlit Frontend/frontend/app/api/repository/: route.ts
Crawlit Frontend/frontend/components/: MermaidDiagram.tsx  MermaidModal.tsx  Navbar.jsx  RepositoryAssistant.tsx  RepositoryIndexingStatus.tsx
Crawlit Frontend/frontend/lib/: api.ts  config.ts  db.ts  repoCache.ts  repository.ts  validateRepository.ts
Crawlit-Backend/: README.md  pyproject.toml
Crawlit-Backend/backend/: api.py  clone.py  core.py  doc_generator.py  ingestion.py  retrieve.py
Crawlit-Backend/backend/db/: __init__.py  database.py  jobs.py  models.py
Crawlit-Backend/backend/workers/: __init__.py  manager.py  worker.py
