[project]
name = "Crawlit-Backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "black>=26.5.1",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "isort>=8.0.1",
    "langchain>=1.3.10",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "pinecone>=7.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "uvicorn>=0.51.0",
]
